# fdutools

./: .gitignore  Pipfile  README.md  fudan.py  grade.py  main.py  pafd.py  pafd_db.py  pafd_serve.py  pyproject.toml  temp.html  temp.txt  utils.py  xk.py
.github/workflows/: main.yml
utils/: captcha.py  email.py  mail.py
