[tool.poetry]
name = "fdutools"
version = "1.0.0"
description = "Useful tools for FDU students"
authors = ["hasbai <jsclndnz@outlook.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = ">=3.7.1"
httpx = "^0.20.0"
lxml = "^4.6.3"
beautifulsoup4 = "^4.10.0"
demjson = "^2.2.4"
PyMySQL = "^1.0.2"
cryptography = "^35.0.0"
Pillow = "<8.3.0"
pandas = "^1.3.4"
dataframe-image = "^0.1.1"
nbformat = "^5.1.3"
matplotlib = "^3.4.3"
easyocr = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
